fix some bugs on authentication

--- a/Assignment2/Assignment2/Views/Bookings/Applications.cshtml
+++ b/Assignment2/Assignment2/Views/Bookings/Applications.cshtml
@@ -4,9 +4,12 @@
     ViewBag.Title = "Applications";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@if (User.IsInRole("Admin"))
+    {
+        { Response.Redirect("/Bookings/ViewAllBookings"); }
+    }
 <h2>Ongoing Appointment Applications</h2>
-
+@Html.ActionLink("Back", "Index")
 <table class="table">
     <thead>
         <tr>
@@ -52,9 +55,9 @@
     @Scripts.Render("~/Scripts/DataTables/jquery.dataTables.js")
     @Scripts.Render("~/Scripts/DataTables/dataTables.bootstrap.js")
     <script>
- $(document).ready(function () {
- $('.table').DataTable();
- });
+        $(document).ready(function () {
+            $('.table').DataTable();
+        });
     </script>
 }
 <link href="~/Content/DataTables/css/dataTables.bootstrap.min.css"
