--- a/Assignment2/Assignment2/Views/Bookings/Confirm.cshtml
+++ b/Assignment2/Assignment2/Views/Bookings/Confirm.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h2>Confirm Your Appointment</h2>
-
+@Html.ActionLink("Back", "Index")
 
 @using (Html.BeginForm())
 {
@@ -70,9 +70,6 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
